--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>2014</width>
-    <height>1179</height>
+    <width>2012</width>
+    <height>1172</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -6707,8 +6707,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>423</width>
-             <height>634</height>
+             <width>408</width>
+             <height>629</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6742,25 +6742,14 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>423</width>
-             <height>634</height>
+             <width>408</width>
+             <height>629</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Manual edits</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_48" columnstretch="0,1,0,0">
-            <item row="3" column="0">
-             <widget class="QToolButton" name="segEllipseButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>../Downloads/ellipse.png</normaloff>../Downloads/ellipse.png</iconset>
-              </property>
-             </widget>
-            </item>
+           <layout class="QGridLayout" name="gridLayout_48" columnstretch="0,0,0,0">
             <item row="4" column="0">
              <spacer name="spacer_seg3">
               <property name="orientation">
@@ -6784,25 +6773,71 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="3" column="0">
+             <widget class="QToolButton" name="segEllipseButton">
+              <property name="text">
+               <string>...</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>../Downloads/ellipse.png</normaloff>../Downloads/ellipse.png</iconset>
+              </property>
+             </widget>
+            </item>
             <item row="0" column="0" colspan="4">
              <widget class="QGroupBox" name="groupBox_SegEditDraw">
               <property name="title">
                <string>Drawing</string>
               </property>
-              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,1,1">
-               <item row="1" column="0" colspan="3">
-                <widget class="QSlider" name="BrushSizeSlider">
-                 <property name="minimum">
-                  <number>1</number>
+              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,0,0,0,0">
+               <item row="1" column="0">
+                <widget class="QToolButton" name="segEraseButton">
+                 <property name="text">
+                  <string>Eraser</string>
                  </property>
-                 <property name="maximum">
-                  <number>50</number>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
                  </property>
-                 <property name="value">
-                  <number>5</number>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+                </widget>
+               </item>
+               <item row="2" column="0">
+                <widget class="QToolButton" name="undoSeg">
+                 <property name="text">
+                  <string>undo</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>../Downloads/undo.png</normaloff>../Downloads/undo.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="1" colspan="2">
+                <widget class="QLineEdit" name="undoSegText">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="text">
+                  <string>Undo</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1" colspan="2">
+                <widget class="QLineEdit" name="segEraseBox">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Eraser</string>
                  </property>
                 </widget>
                </item>
@@ -6820,7 +6855,7 @@ p, li { white-space: pre-wrap; }
                  </property>
                 </widget>
                </item>
-               <item row="0" column="1">
+               <item row="0" column="1" colspan="2">
                 <widget class="QLineEdit" name="segBrushBox">
                  <property name="enabled">
                   <bool>false</bool>
@@ -6836,43 +6871,29 @@ p, li { white-space: pre-wrap; }
                  </property>
                 </widget>
                </item>
-               <item row="0" column="2">
-                <widget class="QToolButton" name="segEraseButton">
-                 <property name="text">
-                  <string>Eraser</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
-                 </property>
-                 <property name="checkable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="3">
-                <widget class="QLineEdit" name="segEraseBox">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="text">
-                  <string>Eraser</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="3">
+               <item row="3" column="0" colspan="3">
                 <widget class="QLineEdit" name="BrushSizeText">
                  <property name="enabled">
                   <bool>false</bool>
                  </property>
                  <property name="text">
                   <string>Brush size</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0" colspan="3">
+                <widget class="QSlider" name="BrushSizeSlider">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>50</number>
+                 </property>
+                 <property name="value">
+                  <number>5</number>
+                 </property>
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
                  </property>
                 </widget>
                </item>
@@ -6886,8 +6907,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>423</width>
-             <height>634</height>
+             <width>206</width>
+             <height>141</height>
             </rect>
            </property>
            <attribute name="label">
