--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -4217,8 +4217,11 @@
                    <string>Dose Matrix</string>
                   </property>
                   <layout class="QGridLayout" name="gridLayout_56">
+                   <item row="0" column="1">
+                    <widget class="QComboBox" name="Tg43_dose_grid"/>
+                   </item>
                    <item row="1" column="1">
-                    <widget class="QComboBox" name="comboBox_2"/>
+                    <widget class="QComboBox" name="Tg43_matrix_size_2"/>
                    </item>
                    <item row="0" column="0">
                     <widget class="QLineEdit" name="lineEdit_tg43_01">
@@ -4230,9 +4233,6 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="0" column="1">
-                    <widget class="QComboBox" name="Tg43_dose_grid"/>
-                   </item>
                    <item row="1" column="0">
                     <widget class="QLineEdit" name="lineEdit_tg43_02">
                      <property name="enabled">
@@ -4240,13 +4240,6 @@
                      </property>
                      <property name="text">
                       <string>Matriz size (mm)</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="2" column="1">
-                    <widget class="QPushButton" name="Tg43_dose_calc">
-                     <property name="text">
-                      <string>Calculate</string>
                      </property>
                     </widget>
                    </item>
@@ -6775,8 +6768,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>420</width>
-             <height>590</height>
+             <width>119</width>
+             <height>57</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6976,7 +6969,7 @@ p, li { white-space: pre-wrap; }
              <x>0</x>
              <y>0</y>
              <width>241</width>
-             <height>175</height>
+             <height>179</height>
             </rect>
            </property>
            <attribute name="label">
