--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6990,7 +6990,7 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
         <item row="4" column="2">
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="initStrucCheck">
           <property name="layoutDirection">
            <enum>Qt::RightToLeft</enum>
           </property>
