--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -335,7 +335,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -2830,7 +2830,7 @@
         <item row="1" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -4500,6 +4500,90 @@
               </item>
              </layout>
             </widget>
+           </widget>
+          </widget>
+          <widget class="QWidget" name="imaging_device">
+           <attribute name="title">
+            <string>Imaging devices</string>
+           </attribute>
+           <widget class="QWidget" name="ct_cal_input" native="true">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>321</width>
+              <height>761</height>
+             </rect>
+            </property>
+            <widget class="QPushButton" name="load_ct_cal">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>160</y>
+               <width>75</width>
+               <height>23</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Load</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="new_ct_cal">
+             <property name="geometry">
+              <rect>
+               <x>100</x>
+               <y>160</y>
+               <width>75</width>
+               <height>23</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Save</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="Export_ct_cal">
+             <property name="geometry">
+              <rect>
+               <x>190</x>
+               <y>160</y>
+               <width>75</width>
+               <height>23</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Export</string>
+             </property>
+            </widget>
+            <widget class="QComboBox" name="comboBox">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>80</y>
+               <width>261</width>
+               <height>22</height>
+              </rect>
+             </property>
+            </widget>
+           </widget>
+           <widget class="QWidget" name="data" native="true">
+            <property name="geometry">
+             <rect>
+              <x>350</x>
+              <y>20</y>
+              <width>441</width>
+              <height>761</height>
+             </rect>
+            </property>
+           </widget>
+           <widget class="QWidget" name="plot" native="true">
+            <property name="geometry">
+             <rect>
+              <x>809</x>
+              <y>19</y>
+              <width>741</width>
+              <height>761</height>
+             </rect>
+            </property>
            </widget>
           </widget>
          </widget>
@@ -6768,8 +6852,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>47</height>
+             <width>587</width>
+             <height>553</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6809,8 +6893,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>109</width>
-             <height>172</height>
+             <width>125</width>
+             <height>189</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6953,8 +7037,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>174</width>
-             <height>135</height>
+             <width>206</width>
+             <height>147</height>
             </rect>
            </property>
            <attribute name="label">
