--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -4554,7 +4554,7 @@
               <string>Export</string>
              </property>
             </widget>
-            <widget class="QComboBox" name="comboBox">
+            <widget class="QComboBox" name="ct_cal_list">
              <property name="geometry">
               <rect>
                <x>10</x>
@@ -6852,8 +6852,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>587</width>
-             <height>553</height>
+             <width>584</width>
+             <height>515</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6893,8 +6893,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>125</width>
-             <height>189</height>
+             <width>147</width>
+             <height>221</height>
             </rect>
            </property>
            <attribute name="label">
@@ -7037,8 +7037,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>206</width>
-             <height>147</height>
+             <width>241</width>
+             <height>179</height>
             </rect>
            </property>
            <attribute name="label">
