--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -4563,6 +4563,9 @@
                <height>22</height>
               </rect>
              </property>
+             <property name="editable">
+              <bool>true</bool>
+             </property>
             </widget>
            </widget>
            <widget class="QWidget" name="data" native="true">
@@ -4592,7 +4595,7 @@
               </spacer>
              </item>
              <item row="1" column="1">
-              <widget class="QPushButton" name="pushButton_3">
+              <widget class="QPushButton" name="ct_cal_add_row">
                <property name="text">
                 <string>Add row</string>
                </property>
@@ -4606,7 +4609,7 @@
               <x>719</x>
               <y>19</y>
               <width>831</width>
-              <height>431</height>
+              <height>501</height>
              </rect>
             </property>
            </widget>
@@ -6877,8 +6880,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>587</width>
-             <height>553</height>
+             <width>101</width>
+             <height>47</height>
             </rect>
            </property>
            <attribute name="label">
