--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -4511,90 +4511,43 @@
              <rect>
               <x>10</x>
               <y>20</y>
-              <width>321</width>
-              <height>761</height>
-             </rect>
-            </property>
-            <widget class="QPushButton" name="load_ct_cal">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>160</y>
-               <width>75</width>
-               <height>23</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Load</string>
-             </property>
-            </widget>
-            <widget class="QPushButton" name="save_changes_ct_cal">
-             <property name="geometry">
-              <rect>
-               <x>100</x>
-               <y>160</y>
-               <width>75</width>
-               <height>23</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Save</string>
-             </property>
-            </widget>
-            <widget class="QPushButton" name="Export_ct_cal">
-             <property name="geometry">
-              <rect>
-               <x>190</x>
-               <y>160</y>
-               <width>75</width>
-               <height>23</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Export</string>
-             </property>
-            </widget>
-            <widget class="QComboBox" name="ct_cal_list">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>80</y>
-               <width>261</width>
-               <height>22</height>
-              </rect>
-             </property>
-             <property name="editable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </widget>
-           <widget class="QWidget" name="data" native="true">
-            <property name="geometry">
-             <rect>
-              <x>350</x>
-              <y>20</y>
-              <width>351</width>
-              <height>431</height>
+              <width>331</width>
+              <height>691</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_57">
-             <item row="0" column="0" colspan="2">
-              <widget class="QTableWidget" name="ct_cal_table"/>
+             <item row="0" column="0" colspan="3">
+              <widget class="QComboBox" name="ct_cal_list">
+               <property name="editable">
+                <bool>true</bool>
+               </property>
+              </widget>
              </item>
              <item row="1" column="0">
-              <spacer name="ct_cal_spacer">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
+              <widget class="QPushButton" name="load_ct_cal">
+               <property name="text">
+                <string>Load</string>
                </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>249</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
+              </widget>
              </item>
              <item row="1" column="1">
+              <widget class="QPushButton" name="save_changes_ct_cal">
+               <property name="text">
+                <string>Save</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2">
+              <widget class="QPushButton" name="Export_ct_cal">
+               <property name="text">
+                <string>Export</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0" colspan="2">
+              <widget class="QTableWidget" name="ct_cal_table"/>
+             </item>
+             <item row="3" column="0" colspan="2">
               <widget class="QPushButton" name="ct_cal_add_row">
                <property name="text">
                 <string>Add row</string>
@@ -4606,9 +4559,9 @@
            <widget class="QWidget" name="ct_cal_plot" native="true">
             <property name="geometry">
              <rect>
-              <x>719</x>
+              <x>359</x>
               <y>19</y>
-              <width>831</width>
+              <width>1191</width>
               <height>501</height>
              </rect>
             </property>
@@ -6880,8 +6833,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>101</width>
-             <height>47</height>
+             <width>587</width>
+             <height>553</height>
             </rect>
            </property>
            <attribute name="label">
