--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -335,7 +335,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -2827,10 +2827,10 @@
         <string>Plan</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_42">
-        <item row="1" column="0">
+        <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -4506,66 +4506,68 @@
            <attribute name="title">
             <string>Imaging devices</string>
            </attribute>
-           <widget class="QWidget" name="ct_cal_input" native="true">
-            <property name="geometry">
-             <rect>
-              <x>10</x>
-              <y>20</y>
-              <width>331</width>
-              <height>691</height>
-             </rect>
-            </property>
-            <layout class="QGridLayout" name="gridLayout_57">
-             <item row="0" column="0" colspan="3">
-              <widget class="QComboBox" name="ct_cal_list">
-               <property name="editable">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QPushButton" name="load_ct_cal">
-               <property name="text">
-                <string>Load</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QPushButton" name="save_changes_ct_cal">
-               <property name="text">
-                <string>Save</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="2">
-              <widget class="QPushButton" name="Export_ct_cal">
-               <property name="text">
-                <string>Export</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="0" colspan="2">
-              <widget class="QTableWidget" name="ct_cal_table"/>
-             </item>
-             <item row="3" column="0" colspan="2">
-              <widget class="QPushButton" name="ct_cal_add_row">
-               <property name="text">
-                <string>Add row</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
-           <widget class="QWidget" name="ct_cal_plot" native="true">
-            <property name="geometry">
-             <rect>
-              <x>359</x>
-              <y>19</y>
-              <width>1191</width>
-              <height>501</height>
-             </rect>
-            </property>
-           </widget>
+           <layout class="QGridLayout" name="gridLayout_58" rowstretch="3,1" columnstretch="1,4">
+            <item row="0" column="0">
+             <widget class="QWidget" name="ct_cal_input" native="true">
+              <layout class="QGridLayout" name="gridLayout_57">
+               <item row="2" column="0" colspan="2">
+                <widget class="QTableWidget" name="ct_cal_table"/>
+               </item>
+               <item row="3" column="0" colspan="2">
+                <widget class="QPushButton" name="ct_cal_add_row">
+                 <property name="text">
+                  <string>Add row</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QPushButton" name="Export_ct_cal">
+                 <property name="text">
+                  <string>Export</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="save_changes_ct_cal">
+                 <property name="text">
+                  <string>Save</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QComboBox" name="ct_cal_list">
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QPushButton" name="load_ct_cal">
+                 <property name="text">
+                  <string>Load</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QWidget" name="ct_cal_plot" native="true"/>
+            </item>
+            <item row="1" column="0">
+             <spacer name="verticalSpacer_19">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </widget>
          </widget>
         </item>
