--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6876,8 +6876,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>125</width>
-             <height>189</height>
+             <width>587</width>
+             <height>553</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6902,7 +6902,7 @@ p, li { white-space: pre-wrap; }
               <property name="title">
                <string>Drawing</string>
               </property>
-              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,0">
+              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,3,0">
                <item row="1" column="0">
                 <widget class="QToolButton" name="segEraseButton">
                  <property name="text">
@@ -6914,27 +6914,6 @@ p, li { white-space: pre-wrap; }
                  </property>
                  <property name="checkable">
                   <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="0">
-                <widget class="QToolButton" name="undoSeg">
-                 <property name="text">
-                  <string>undo</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>../Downloads/undo.png</normaloff>../Downloads/undo.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="1" colspan="2">
-                <widget class="QLineEdit" name="undoSegText">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="text">
-                  <string>Undo</string>
                  </property>
                 </widget>
                </item>
@@ -6968,19 +6947,24 @@ p, li { white-space: pre-wrap; }
                  </property>
                 </widget>
                </item>
-               <item row="0" column="1" colspan="2">
-                <widget class="QLineEdit" name="segBrushBox">
+               <item row="2" column="0">
+                <widget class="QToolButton" name="undoSeg">
+                 <property name="text">
+                  <string>undo</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>../Downloads/undo.png</normaloff>../Downloads/undo.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="1" colspan="2">
+                <widget class="QLineEdit" name="undoSegText">
                  <property name="enabled">
                   <bool>false</bool>
                  </property>
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
                  <property name="text">
-                  <string>Brush</string>
+                  <string>Undo</string>
                  </property>
                 </widget>
                </item>
@@ -7000,13 +6984,36 @@ p, li { white-space: pre-wrap; }
                   <number>1</number>
                  </property>
                  <property name="maximum">
-                  <number>50</number>
+                  <number>25</number>
                  </property>
                  <property name="value">
                   <number>5</number>
                  </property>
                  <property name="orientation">
                   <enum>Qt::Horizontal</enum>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QLineEdit" name="segBrushBox">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Brush</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QCheckBox" name="brushClipHU">
+                 <property name="text">
+                  <string>Use HU thresholds</string>
                  </property>
                 </widget>
                </item>
